cf_infra/stack.yml
AWSTemplateFormatVersion: 2010-09-09
Mappings:
  Environments:
    dev:
      VPCCidrBlock: 172.20.0.0/16
      PublicSubnet: 172.20.10.0/24
      PrivateSubnet: 172.20.20.0/24

Parameters:
  EnvironmentType:
    Type: String
    Default: dev
  EC2KeyPair:                                                         #Add the created key name here
    Description: Name of an existing EC2 Server KeyPair
    Type: 'AWS::EC2::KeyPair::KeyName'
    MinLength: '1'
    Default: icpune-perf-jump-server

Resources:
  StackVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !FindInMap
        - Environments
        - !Ref EnvironmentType
        - VPCCidrBlock
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Sub 'vpc:${AWS::StackName}'
        - Key: 'nice:stack-name'
          Value: !Ref 'AWS::StackName'
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap
        - Environments
        - !Ref EnvironmentType
        - PublicSubnet
      AvailabilityZone: us-west-2a
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - public-subnet
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap
        - Environments
        - !Ref EnvironmentType
        - PrivateSubnet
      AvailabilityZone: us-west-2a
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - private-subnet

  PublicEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-07a0da1997b55b23e
      InstanceType: t2.micro
      KeyName: !Ref EC2KeyPair
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - public-instance
        - Key: 'owner'
          Value: demo-poc
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "abcd" >> /home/ec2-user/rohit.txt
          yum upgrade -y
          amazon-linux-extras install epel -y
          wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat/jenkins.repo
          rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
          yum install jenkins java-1.8.0-openjdk-devel -y
          systemctl daemon-reload
          systemctl start jenkins
          yum install ansible -y
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress: 'true'
          DeviceIndex: 0
          #SubnetId: !Ref PublicSubnet                                          #Public subnet ID
          SubnetId: subnet-0e27a37cbaece2f5b
          GroupSet:
            - !Ref PublicServerSG
             
  PublicServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Public Server Security Group
      #VpcId: !Ref myVPC                                                    # change VPC ID
      VpcId: vpc-05c14ad6e10af3d90
      GroupName: Public-Server-SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - public-server-sg
  
  PrivateEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-07a0da1997b55b23e
      InstanceType: t2.micro
      KeyName: !Ref EC2KeyPair
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - private-instance
        - Key: 'owner'
          Value: demo-poc
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "private" >> /home/ec2-user/rohit.txt
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress: 'false'
          DeviceIndex: 0
          #SubnetId: !Ref PrivateSubnet                                          #Private subnet ID
          SubnetId: subnet-0bacfb228c3374ff7
          GroupSet:
            - !Ref PrivateServerSG
  
  PrivateServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Private Server Security Group
      #VpcId: !Ref myVPC                                                    # change VPC ID
      VpcId: vpc-05c14ad6e10af3d90
      GroupName: Private-Server-SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.221.30.0/24                                                #Cidr of public subnet
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join
            - ':'
            - - !Ref 'AWS::StackName'
              - public-server-sg
